Bug 456650 - Links in the "Select the Backend" dialogue don't work
Summary: Links in the "Select the Backend" dialogue don't work
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Flatpak Linux
: NOR minor
Target Milestone: ---
Assignee: Cantor Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-12 19:53 UTC by Jack Hill
Modified: 2022-08-02 17:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jack Hill 2022-07-12 19:53:32 UTC
SUMMARY
Clicking links in this dialogue will make the right-hand side go blank, and don't open a browser window.

STEPS TO REPRODUCE
1. Open Cantor
2. Click on one of the links on the right side of the screen

OBSERVED RESULT
No browser window opens, right hand pane goes blank

EXPECTED RESULT
Browser window should open

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20220711
KDE Plasma Version: 5.25.2
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Kernel Version: 5.18.9-2-default (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
Comment 1 Alexander Semke 2022-07-20 08:01:28 UTC
Git commit 7fb5f1118d20ba461aed414395dc6ddfe033cfbd by Alexander Semke.
Committed on 20/07/2022 at 08:01.
Pushed by asemke into branch 'master'.

Open URLs in the "Select Backend"-dialog in the external browser.
FIXED-IN: 22.08

M  +18   -9    src/backendchoosedialog.cpp

https://invent.kde.org/education/cantor/commit/7fb5f1118d20ba461aed414395dc6ddfe033cfbd
Comment 2 Alexander Semke 2022-08-02 17:14:23 UTC
Git commit e73ab99b8127b693fdc7300beada0d826781af85 by Alexander Semke.
Committed on 02/08/2022 at 17:13.
Pushed by asemke into branch 'release/22.08'.

Squash commit of multiple fixes that will go into 22.08.

When saving the results, use the file extension and not the mime-type in the QFileDialog to show the relevant files only.

Open URLs in the "Select Backend"-dialog in the external browser.
FIXED-IN: 22.08

Enable highdpi pixmaps

Fixes icon rendering on highdpi screens

[maxima] remove the obsolete quotes in string variable values and properly handle quoted sub-strings in string variables.

Moved the worksheet specific actions from the menu "Settings" to the menu "Worksheet" to make it more explicit these actions are affecting the current worksheet only and don't change the global default settings.

Updated ChangeLog.

M  +21   -0    CHANGELOG.md
M  +2    -3    src/animationresultitem.cpp
M  +18   -9    src/backendchoosedialog.cpp
M  +10   -0    src/backends/maxima/maximaexpression.cpp
M  +8    -0    src/backends/maxima/maximavariablemodel.cpp
M  +41   -8    src/backends/maxima/testmaxima.cpp
M  +2    -0    src/backends/maxima/testmaxima.h
M  +10   -8    src/cantor_part.rc
M  +15   -3    src/imageresultitem.cpp
M  +3    -5    src/lib/imageresult.cpp
M  +1    -0    src/main.cpp
M  +10   -14   src/textresultitem.cpp

https://invent.kde.org/education/cantor/commit/e73ab99b8127b693fdc7300beada0d826781af85