src/backends/maxima/testmaxima.h
@@ -58,6 +58,8 @@ private Q_SLOTS:
 
     void testLispMode01();
 
+    void testTextQuotes();
+
     void testLoginLogout();
     void testRestartWhileRunning();
 
